# Practice

./: .gitignore  CMakeLists.txt
allocator/allocator/: CMakeLists.txt
associative_container/search_tree/: CMakeLists.txt
associative_container/search_tree/b_tree/: CMakeLists.txt
associative_container/search_tree/b_tree/include/: b_tree.h
associative_container/search_tree/b_tree/tests/: CMakeLists.txt  b_tree_tests.cpp
associative_container/search_tree/b_tree_memory/include/: b_tree_memory.h
associative_container/search_tree/b_tree_memory/src/: crutch.cpp
associative_container/search_tree/b_tree_memory/tests/: b_tree_memory_tests.cpp
associative_container/search_tree/binary_search_tree/AVL_tree/include/: AVL_tree.h
associative_container/search_tree/binary_search_tree/AVL_tree/tests/: AVL_tree_tests.cpp
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/binary_search_tree/red_black_tree/include/: red_black_tree.h
associative_container/search_tree/binary_search_tree/red_black_tree/tests/: CMakeLists.txt  red_black_tree_tests.cpp
associative_container/search_tree/binary_search_tree/scapegoat_tree/include/: scapegoat_tree.h
associative_container/search_tree/binary_search_tree/scapegoat_tree/tests/: CMakeLists.txt  scapegoat_tree_tests.cpp
associative_container/search_tree/binary_search_tree/splay_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/splay_tree/include/: splay_tree.h
associative_container/search_tree/binary_search_tree/splay_tree/tests/: CMakeLists.txt  splay_tree_tests.cpp
associative_container/search_tree/binary_search_tree/tests/: binary_search_tree_tests.cpp
associative_container/search_tree/bp_tree/include/: bp_tree.h
associative_container/search_tree/bp_tree/tests/: bp_tree_tests.cpp
associative_container/search_tree/include/: search_tree.h
associative_container/search_tree/indexing_tree/b_plus_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_plus_tree/include/: b_plus_tree.h
associative_container/search_tree/indexing_tree/b_star_plus_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_star_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree/: CMakeLists.txt
associative_container/search_tree/tree_interface/: tree_interface.h
logger/: CMakeLists.txt
(+65 files in other folders)
